Changes for Filter Effects specification
----------------------------------------
2013-01-26  Dirk Schulze  <dschulze@adobe.com>
- Fixed interfaces:
  https://www.w3.org/Bugs/Public/show_bug.cgi?id=20781
  https://www.w3.org/Bugs/Public/show_bug.cgi?id=20782

2013-01-15  Dirk Schulze  <dschulze@adobe.com>
- Remove implementing of SVGTest as discussed on SVG WG meeting of 01-10-2013.

2013-01-14  Dirk Schulze  <dschulze@adobe.com>
- 0% on contrast makes the image gray, not black.
  https://www.w3.org/Bugs/Public/show_bug.cgi?id=19712

2013-01-14  Dirk Schulze  <dschulze@adobe.com>
- Corrected issue with feComponentTransfer
  https://www.w3.org/Bugs/Public/show_bug.cgi?id=20658
- Added issue about adding amount transformation function on brightness and contrast filter functions.

2013-01-13  Dirk Schulze  <dschulze@adobe.com>
- More reorganizing for better orientation.
- Distinguish between custom filter resource format and custom filter type.
- Add Media Query Feature: filter.
- Clarifications on filter functions (meaning of opacity, added more issues).

2013-01-11  Dirk Schulze  <dschulze@adobe.com>
- Reorganize chapters for a better orientation.
- Modify @filter rule to simplify the syntax, make it more independent of shading languages.
- Lot of clean-up.

2012-11-16  Dirk Schulze  <dschulze@adobe.com>
- Start outlining how margin for custom-filters will look like.

2012-11-16  Dirk Schulze  <dschulze@adobe.com>
- Editorial changes to custom-filter at-rule.

2012-11-16  Dirk Schulze  <dschulze@adobe.com>
- First draft of the new custom-filter at-rule.

2012-11-08  Dirk Schulze  <dschulze@adobe.com>
- Add test suite information on spec.

2012-11-08  Dirk Schulze  <dschulze@adobe.com>
- Update normative and informative references.

2012-11-08  Dirk Schulze  <dschulze@adobe.com>
- Remove issue to hit testing. Filters won't effect hit testing, since it could lead to security issues.

2012-11-08  Dirk Schulze  <dschulze@adobe.com>