@@ -11,12 +11,12 @@
    rel=dcterms.rights>
   <meta content="Filter Effects 1.0" name=dcterms.title>
   <meta content=text name=dcterms.type>
-  <meta content=2013-01-26 name=dcterms.issued>
+  <meta content=2013-02-12 name=dcterms.issued>
   <meta content="Dean Jackson" name=dcterms.creator>
   <meta content="Erik Dahlström" name=dcterms.creator>
   <meta content="Dirk Schulze" name=dcterms.creator>
   <meta content=W3C name=dcterms.publisher>
-  <meta content="http://www.w3.org/TR/2013/ED-filter-effects-20130126/"
+  <meta content="http://www.w3.org/TR/2013/ED-filter-effects-20130212/"
    name=dcterms.identifier>
   <meta content="text/html; charset=UTF-8" http-equiv=content-type>
   <link href="style/default.css" rel=stylesheet type="text/css">
@@ -33,7 +33,7 @@
 
    <h1>Filter Effects 1.0</h1>
 
-   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 26 January
+   <h2 class="no-num no-toc" id=longstatus-date>Editor's Draft 12 February
     2013</h2>
 
    <dl>
@@ -41,7 +41,7 @@
 
     <dd> <a
      href="http://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html">http://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html</a>
-     <!--http://www.w3.org/TR/2013/WD-filter-effects-20130126/-->
+     <!--http://www.w3.org/TR/2013/WD-filter-effects-20130212/-->
 
     <dt>Latest version:
 
@@ -91,7 +91,8 @@
     title="Massachusetts Institute of Technology">MIT</abbr></a>, <a
     href="http://www.ercim.eu/"><abbr
     title="European Research Consortium for Informatics and Mathematics">ERCIM</abbr></a>,
-    <a href="http://www.keio.ac.jp/">Keio</a>), All Rights Reserved. W3C <a
+    <a href="http://www.keio.ac.jp/">Keio</a>, <a
+    href="http://ev.buaa.edu.cn/">Beihang</a>), All Rights Reserved. W3C <a
     href="http://www.w3.org/Consortium/Legal/ipr-notice#Legal_Disclaimer">liability</a>,
     <a
     href="http://www.w3.org/Consortium/Legal/ipr-notice#W3C_Trademarks">trademark</a>
@@ -307,8 +308,9 @@
    <li><a href="#custom-filter"><span class=secno>11. </span>Custom Filter
     Function</a>
     <ul class=toc>
-     <li><a href="#media-feature-filter"><span class=secno>11.1. </span>The
-      media feature: ‘<code class=css>filter</code>’</a>
+     <li><a href="#support-condition-filter"><span class=secno>11.1.
+      </span>The ‘<code class=css>@supports</code>’ condition: ‘<code
+      class=css>filter</code>’</a>
 
      <li><a href="#the-atfilter-rule"><span class=secno>11.2. </span>The
       @filter rule</a>
@@ -10844,32 +10846,37 @@ double turbulence(int nColorChannel, double *point, double <a
        unique identifier that can be referenced by the custom-filter
        function.
 
-      <h3 id=media-feature-filter><span class=secno>11.1. </span>The media
-       feature: ‘<a href="#filter"><code class=css>filter</code></a>’</h3>
+      <h3 id=support-condition-filter><span class=secno>11.1. </span>The
+       ‘<code class=css>@supports</code>’ condition: ‘<a
+       href="#filter"><code class=css>filter</code></a>’</h3>
 
-      <table>
+      <table class=descdef>
        <tbody>
         <tr>
          <td><em>Value: </em>
 
          <td>&lt;custom-filter-type&gt;
-
-        <tr>
-         <td><em>Applies to:</em>
-
-         <td>bitmap media types
-
-        <tr>
-         <td><em>Accepts min/max prefix:</em>
-
-         <td>no
       </table>
 
       <p> To verify if a UA supports a certain customized filter effect type,
-       the Media Queries <a href="#MEDIAQ"
-       rel=biblioentry>[MEDIAQ]<!--{{!MEDIAQ}}--></a> syntax gets extended by
-       adding the media feature ‘<a href="#filter"><code
+       the support condition syntax <a href="#CSS3-CONDITIONAL"
+       rel=biblioentry>[CSS3-CONDITIONAL]<!--{{!CSS3-CONDITIONAL}}--></a>
+       gets extended by adding the media feature ‘<a href="#filter"><code
        class=css>filter</code></a>’.
+
+      <pre class=prod><dfn
+       id=ltcustom-filter-typegt>&lt;custom-filter-type&gt;</dfn> = webgl</pre>
+
+      <p> This specification supports the custom filter type ‘<code
+       class=css>webgl</code>’ to indicate support for the <a
+       href="#shading-language">shading language</a> based on WebGL. Future
+       versions may allow additional keywords.
+
+      <div class=example>
+       <pre><code>@support filter(webgl) {
+    ...
+}</code></pre>
+      </div>
 
       <h3 id=the-atfilter-rule><span class=secno>11.2. </span>The @filter
        rule</h3>
@@ -11236,7 +11243,7 @@ descriptor: value;</pre>
         <tr>
          <td>Value:
 
-         <td>&lt;margin-width&gt;{1,4} | auto
+         <td>&lt;margin-width&gt;{1,4}
 
         <tr>
          <td><em>Initial:</em>
@@ -11251,25 +11258,17 @@ descriptor: value;</pre>
           href="#FilterPrimitiveSubRegion">Filter primitive subregion</a>.
       </table>
 
-      <p class=issue> The editors are looking into defining custom shader
-       margins descriptors.
+      <p> The ‘<a href="#margin"><code class=property>margin</code></a>’
+       descriptor values and the input <a
+       href="#FilterPrimitiveSubRegion">Filter primitive subregion</a> define
+       the filter primitive subregion of the custom filter primitive.
 
       <pre class=prod><dfn
        id=ltmargin-widthgt>&lt;margin-width&gt;</dfn> = <var>&lt;length&gt;</var> | <var>&lt;percentage&gt;</var> | <var>auto</var></pre>
 
-      <dl>
-       <dt><var>&lt;length&gt;</var>
-
-       <dd>
-
-       <dt><var>&lt;percentage&gt;</var>
-
-       <dd>
-
-       <dt><var>‘<code class=css>auto</code>’</var>
-
-       <dd>
-      </dl>
+      <p> For the definiton of the <a
+       href="#ltmargin-widthgt">&lt;margin-width&gt;</a> values see CSS Box
+       Model <a href="#CSS21" rel=biblioentry>[CSS21]<!--{{!CSS21}}--></a>.
 
       <h2 id=shading-language><span class=secno>12. </span>Shading language</h2>
 
@@ -15346,10 +15345,10 @@ interface <b>SVGFEBlendElement</b> : <a
        <dt id=CSS3-CONDITIONAL>[CSS3-CONDITIONAL]
 
        <dd>L. David Baron. <a
-        href="http://www.w3.org/TR/2012/WD-css3-conditional-20120911/"><cite>CSS
-        Conditional Rules Module Level 3.</cite></a> 11 September 2012. W3C
+        href="http://www.w3.org/TR/2012/WD-css3-conditional-20121213/"><cite>CSS
+        Conditional Rules Module Level 3.</cite></a> 13 December 2012. W3C
         Working Draft. (Work in progress.) URL: <a
-        href="http://www.w3.org/TR/2012/WD-css3-conditional-20120911/">http://www.w3.org/TR/2012/WD-css3-conditional-20120911/</a>
+        href="http://www.w3.org/TR/2012/WD-css3-conditional-20121213/">http://www.w3.org/TR/2012/WD-css3-conditional-20121213/</a>
        </dd>
        <!---->
 
@@ -15389,15 +15388,6 @@ interface <b>SVGFEBlendElement</b> : <a
         href="http://www.w3.org/TR/2011/WD-cssom-20110712/"><cite>CSSOM.</cite></a>
         12 July 2011. W3C Working Draft. (Work in progress.) URL: <a
         href="http://www.w3.org/TR/2011/WD-cssom-20110712/">http://www.w3.org/TR/2011/WD-cssom-20110712/</a>
-       </dd>
-       <!---->
-
-       <dt id=MEDIAQ>[MEDIAQ]
-
-       <dd>Florian Rivoal. <a
-        href="http://www.w3.org/TR/2012/REC-css3-mediaqueries-20120619/"><cite>Media
-        Queries.</cite></a> 19 June 2012. W3C Recommendation. URL: <a
-        href="http://www.w3.org/TR/2012/REC-css3-mediaqueries-20120619/">http://www.w3.org/TR/2012/REC-css3-mediaqueries-20120619/</a>
        </dd>
        <!---->
 
@@ -16071,6 +16061,9 @@ interface <b>SVGFEBlendElement</b> : <a
        <li>contrast(&lt;number&gt; | &lt;percentage&gt;), <a
         href="#contrastltnumbergt-ltpercentagegt"
         title="section 5."><strong>5.</strong></a>
+
+       <li>&lt;custom-filter-type&gt;, <a href="#ltcustom-filter-typegt"
+        title="section 11.1."><strong>11.1.</strong></a>
 
        <li>custom(IDENT [, &lt;param&gt;]*), <a href="#customident-ltparamgt"
         title="section 5."><strong>5.</strong></a>
