@@ -1,6 +1,10 @@
 Changes for Filter Effects specification
 ----------------------------------------
 2013-01-26  Dirk Schulze  <dschulze@adobe.com>
+- Define @support condition for custom filter extensions.
+- Define margin descriptor on custom filters.
+
+2013-01-26  Dirk Schulze  <dschulze@adobe.com>
 - Fixed interfaces:
   https://www.w3.org/Bugs/Public/show_bug.cgi?id=20781
   https://www.w3.org/Bugs/Public/show_bug.cgi?id=20782
